--- a/solution/基础/链表/Day9-109有序链表转换为二叉搜索树.md
+++ b/solution/基础/链表/Day9-109有序链表转换为二叉搜索树.md
@@ -38,5 +38,5 @@ class Solution {
 
 ### **复杂度分析**
 
-- 时间复杂度：$O(N)$，其中 N 为链表的长度。
-- 空间复杂度：$O(logN)$，其中N为树的深度，递归时所创建的空间
+- 时间复杂度：$O(NlogN)$，其中 N 为链表的长度。
+- 空间复杂度：$O(logN)$，其中logN为树的深度，递归时所创建的空间
