--- a/solution/基础/哈希表/Day19-1.两数之和.md
+++ b/solution/基础/哈希表/Day19-1.两数之和.md
@@ -1,4 +1,4 @@
-### 思路
+### 思路1（暴力枚举）
 
 -   遍历数组
 -   在每次遍历时，记录下target减去当前数组的值为temp
@@ -30,3 +30,34 @@ class Solution {
 
 - 时间复杂度：$O(N^2)$，其中 N 为数组长度。
 - 空间复杂度：$O(1)$
+
+<hr>
+
+### 思路2（哈希表）
+
+-   使用暴力的话是将计算出另一个值，在剩下的数组中遍历查找，这样时间复杂度很慢
+-   我们考研使用哈希表，将遍历过的值存到哈希表中，然后每次从哈希表中查找另一个值，找到了就说明存在，而且复杂度仅仅为$O(1)$
+
+### 代码
+
+```java
+class Solution {
+    public int[] twoSum(int[] nums, int target) {
+        HashMap<Integer, Integer> hashtable = new HashMap<>();
+        
+        for (int i  = 0; i < nums.length; i++) {
+            if (hashtable.containsKey(target - nums[i])) {                
+                return new int[] {hashtable.get(target-nums[i]), i};
+            }
+            hashtable.put(nums[i], i);
+        }
+        return null;
+    }
+}
+```
+
+### 复杂度分析
+
+- 时间复杂度：$O(N)$，其中 N 为数组长度
+- 空间复杂度：$O(N)$，其中 N 为数组长度
+
