--- a/solution/基础/哈希表/Day21-447.回旋镖的数量.md
+++ b/solution/基础/哈希表/Day21-447.回旋镖的数量.md
@@ -1,8 +1,7 @@
-### 思路
+### 思路1（暴力，不推荐）
 
--   对于每一个点，都计算其它点与它的距离，然后把这个距离放入map中作为key，满足这一距离的其它点的个数作为value
--   遍历一遍点A的map，对于所有的距离下的个数都计算出可能的组合方式再相加，就得到对于一个点来说满足要求的所有组合
--   在外面再套一层循环，就可以获得所有点相对于其它点的map，也就可以获得所有的组合个数，也就是我们需要的返回值
+-   暴力三层循环，搜索所有的结果
+-   超时，不推荐
 
 ### 代码
 
@@ -10,38 +9,82 @@
 ```java
 class Solution {
     public int numberOfBoomerangs(int[][] points) {
-
         int res = 0;
-
-        for(int i = 0; i < points.length;i++){
-            Map<Integer, Integer> record = new HashMap<>();
-            for(int j = 0; j < points.length; j ++){
-                if( j != i )
-                    if(record.containsKey(distance(points[i], points[j]))){
-                        record.put(distance(points[i], points[j]),
-                                record.get(distance(points[i], points[j])) + 1);
+        for (int i = 0; i < points.length; i++) {
+            for (int j = 0; j < points.length; j++) {
+                for (int k = 0; k < points.length; k++) {
+                    if (i != j && i != k && j != k) {
+                        int d1 = dis(points[i], points[j]);
+                        int d2 = dis(points[i], points[k]);
+                        if (d1 == d2) {
+                            res++;
+                        }
                     }
-                    else
-                        record.put(distance(points[i], points[j]), 1);
+                }
             }
-            for(int k : record.values()){
-                if(k >= 2)//这里其实可以不加这句，因为k=1或k=0，结果都是0，但是加上可以减少一定的计算量。
-                    res += k * (k - 1);
-            }
-            
         }
-
         return res;
     }
 
-    private int distance(int[] x, int[] y){
-
-        return (x[0] - y[0]) * (x[0] - y[0]) + (x[1] - y[1]) * (x[1] - y[1]);
+    public int dis(int[] point1, int[] point2) {
+        // 计算两点的距离
+        return (int) (Math.pow(point1[0] - point2[0], 2) + Math.pow(point1[1] - point2[1], 2));
     }
 }
 ```
 
 ### **复杂度分析**
 
-- 时间复杂度：$O(N^2)$
+- 时间复杂度：$O(N^3)$，暴力3层循环，其中 N 表示数组的长度
 - 空间复杂度：$O(1)$
+
+<hr>
+
+### 思路2（哈希表）
+
+-   外层for遍历一遍数组，计算其他点与它的距离
+-   每次计算一个点的其他的与它距离时，使用一个新的哈希表，key存储的是他们未开根号的距离，value是存储出现的次数
+-   如果value值是1，代表只出现一次
+-   如果value值是2，说明刚刚好有两个相等的点，但是排列的方式有两种，如果值为3，排列的方式有6种。即有 `n`个相同的点，排列方式有`n(n-1)`种
+
+### 代码
+
+
+```java
+class Solution {
+    public int numberOfBoomerangs(int[][] points) {
+        int res = 0;
+
+        for (int i = 0; i < points.length; i++) {
+            // 计算每个点时使用一个新的哈希表
+            Map<Integer, Integer> hashtable = new HashMap<>();
+            for (int j = 0; j < points.length; j++) {
+                // i != j，因为计算的是其他的点
+                if (i != j) {
+                    // 获取未开根号的距离
+                    int d = dis(points[i], points[j]);
+                    hashtable.put(d, hashtable.getOrDefault(d, 0) + 1);
+                }
+            }
+
+            for (Map.Entry<Integer, Integer> entry : hashtable.entrySet()) {
+                // 因为只有距离相等才会被记录两次，如果没有和他相等的，只会被记录一次，那么我们就忽略
+                if (entry.getValue() >= 2) {
+                    res += entry.getValue()*(entry.getValue()-1);
+                }
+            }
+        }
+        return res;
+    }
+
+    public int dis(int[] point1, int[] point2) {
+        // 计算两点的距离
+        return (int) (Math.pow(point1[0] - point2[0], 2) + Math.pow(point1[1] - point2[1], 2));
+    }
+}
+```
+
+### **复杂度分析**
+
+- 时间复杂度：$O(N^2)$，其中 N 为数组的长度
+- 空间复杂度：$O(N^2)$，其中 N 为哈希表的大小，需要使用`N`个哈希表记录`N`个点到其他`N-1`的距离出现的次数，最坏情况下每个距离都不一样，那么需要的每个哈希表大小为`N-1`
