--- a/solution/基础/哈希表/Day22-3.无重复字符的最长子串.md
+++ b/solution/基础/哈希表/Day22-3.无重复字符的最长子串.md
@@ -1,9 +1,9 @@
-### 思路
+### 思路（滑动窗口+哈希集合）
 
--   我们使用两个指针表示字符串中的某个子串
--   在每一步的操作中，我们会将左指针向右移动一格，表示 我们开始枚举下一个字符作为起始位置，然后我们可以不断地向右移动右指针，但需要保证这两个指针对应的子串中没有重复的字符
--   在移动结束后，这个子串就对应着 以左指针开始的，不包含重复字符的最长子串。我们记录下这个子串的长度；
--   在枚举结束后，我们找到的最长的子串的长度即为答案
+-   使用滑动窗口来解决
+-   首先遍历一遍字符串
+-   使用哈希集合，先判断下一个字符是否存在，如果不存在的话就往set中添加字符，继续判断下一个；如果存在的话，就停止添加，然后向右移动一个窗口
+-   每次窗口向右移动时，窗口中最左边的元素必然会出去，所以需要我们`remove`
 
 ### 代码
 
@@ -11,20 +11,26 @@
 ```java
 class Solution {
     public int lengthOfLongestSubstring(String s) {
-        Set<Character> occ = new HashSet<Character>();
-        int n = s.length();
-        int rk = -1, ans = 0;
-        for (int i = 0; i < n; ++i) {
+        Set<Character> set = new HashSet<>();
+        int res = 0;
+        int p = -1;
+        int len = s.length();
+        for (int i = 0; i < len; i++) {
+            // 从第二个开始，每次往后移动一个都要删除一个前面的字符
             if (i != 0) {
-                occ.remove(s.charAt(i - 1));
+                set.remove(s.charAt(i-1));
             }
-            while (rk + 1 < n && !occ.contains(s.charAt(rk + 1))) {
-                occ.add(s.charAt(rk + 1));
-                ++rk;
+            // 判断下一个字符是否已经存在，如果存在就结束循环
+            while (p + 1 < len && !set.contains(s.charAt(p+1))) {
+                // 将不重复的字符添加的集合中
+                set.add(s.charAt(p+1));
+                // 指针右移
+                p++;
             }
-            ans = Math.max(ans, rk - i + 1);
+            // 获取最长的字串
+            res = Math.max(res, set.size());
         }
-        return ans;
+        return res;
     }
 }
 ```
@@ -32,4 +38,4 @@ class Solution {
 ### **复杂度分析**
 
 - 时间复杂度：$O(N)$，其中 N 为字符串长度
-- 空间复杂度：$O(1)$
+- 空间复杂度：$O(∣Σ∣)$，其中 Σ 表示字符集（即字符串中可以出现的字符），∣Σ∣ 表示字符集的大小
